--- a/vocabapp/src/App.css
+++ b/vocabapp/src/App.css
@@ -16,3 +16,7 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+html{
+  background-color: #1D232A;
+  user-select: none;}
